# address-ner

./: .gitignore  README.md  pyproject.toml
address_ner/: __init__.py  address_generator.py  cli.py  data.py  eval.py  logger.py  meowlflow_schema.py  mlflow_logger.py  pull_data.py  requirements.txt  train.py  utils.py  version.py
artifacts/: .gitignore
data/: .gitignore
data/input/: .gitignore
notebooks/: 008 OTS NER.ipynb  009 Generate Addresses.ipynb  011 Address Injection.ipynb  099 CoNLL Statistics.ipynb  100 Build Address Dataset.ipynb  200 Prediction Post-Processing.ipynb
tests/: test_address_ner.py
