[tool.poetry]
name = "address-ner"
version = "0.0.0" # placeholder for dynamic versioning
description = ""
authors = ["Daniel Serve <dserven@gmail.com>", "Lucas Serven <lserven@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.0"
scikit-learn = "^1.0.2"
click = "^8.0.3"
torch = "^1.10.2"
torchtext = "^0.13"
datasets = "^2.4.0"
transformers = "^4.22.1"
# meowlflow = {git = "https://github.com/connylabs/meowlflow.git", rev = "main"}
spacy = "^3.4.2"
protobuf = "^3.20"
Faker = "^15.1.1"
seqeval = "^1.2.2"
accelerate = "^0.21.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
isort = "^5.10.1"

[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/setup.py",]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
address-ner = "address_ner.cli:cli"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
# Make the leading 'v' optional.
pattern  = "^(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?"
